# Claude-Halo

./: .env.example  .gitignore  README.md  build.bat  build.sh  claude-halo.spec  pyproject.toml
halo/: __init__.py  __main__.py  app.py  coordinator.py
halo/ai/: __init__.py  catalog.py  claude_client.py  claude_code_provider.py  fake.py  ports.py  switch.py
halo/audio/: __init__.py  calibration.py  capture.py  engine.py  fake.py  mic_calibrator.py  ports.py  stt.py  wake_word.py  whisper_models.py
halo/config/: __init__.py  defaults.py  history.py  settings.py
halo/core/: __init__.py  events.py  models.py  session.py  state_machine.py
halo/platform/: __init__.py  accel.py  autostart.py  keychain.py  ports.py  window_mac.py  window_win.py
halo/ui/: __init__.py  animation.py  app_link.py  braille.py  sections.py  terminal_probe.py  theme.py  tui_app.py
halo/ui/screens/: __init__.py  idle.py  onboarding.py  orb_demo.py  session.py
halo/ui/widgets/: __init__.py  calibration_modal.py  config_panel.py  modals.py  orb.py  orb_physics.py  rows.py  session_buttons.py  status_bar.py  thread_view.py  voice_modals.py
scripts/: preview_calibration.py  preview_idle.py  preview_onboarding.py  preview_orb.py  preview_session.py  probe_claude_code.py  stt_check.py
tests/ai/: test_claude_client.py  test_claude_code_provider.py
tests/audio/: test_calibration.py  test_capture.py  test_wake_word.py  test_whisper_models.py
tests/config/: test_history.py  test_settings.py
tests/core/: test_events.py  test_session.py  test_state_machine.py
tests/platform/: test_accel.py  test_autostart.py
tests/ui/: test_braille.py  test_calibration_modal.py  test_idle_smoke.py  test_onboarding.py  test_orb_physics.py  test_session_flow.py  test_theme.py
